package com.aaron.justlike.online.preview;

/**
 * @author Aaron aaronzheng9603@gmail.com
 */
public interface IPreviewInterface {

    int NORMAL = 0;
    int SET_WALLPAPER = 1;
}
